--- a/DS_P4roj3_Calulator/DS_P4roj3_Calulator/Form1.resx
+++ b/DS_P4roj3_Calulator/DS_P4roj3_Calulator/Form1.resx
@@ -118,19 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="CE_butt.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAIlSURBVGhD7ZhBTlsxEIazCOwQKxBVimBBT1CBeg5WcISyBu4C4gIIdUcXrDgDUKlHoJtKLWrZ
-        gfnG/h8YkpfkgZM4wp/0K/bMeDSD8ibmtQqFQqFQKLxXnHPz6ArlwA36hj6pvOHgQBudodz4jToqczAE
-        H/hjzl2jFZknBjV00KkVBMcy94fAvRDv/qN1mScOtSz7qpz7I1M9BG2iO3SPtmTOBmryaNsb/J/RPx/p
-        3K7MWaHa6hvBt4LseTCOZM4O1de7Eexz6MJHOHeOZuXKjlBij0awxWPWfjPm5WoE576iRW1rsRiL1bYx
-        nPVo+wS2N49Zzu34DOEPUduM+RRj7MjcCJ193gj7/WB2t+iLzI3h7AK6tETwE32Q6xFsL2OW5GpEOB41
-        wjrpmCVHbTOskzRhhBRqhM94zO55YwLI1dUMStaEEdLQCIrH7IH8ySBn/BzYZ7weOAwGEVKFRn6EpZ9U
-        bfmTQt64GSNJE0ZI193IjPxJIe9YGom/WofyJ4Oc4/lqaTOuh30J1U6z1xDSqBGD9ajH7+N0Yp2smZAi
-        asRgP6ofxK4Riy1JM+H4i0YMbNUV5ReaziuKgS2+NNpEm85Lo4F9+q/xFfim/x+rCvwjGcspUW39GzGI
-        icfytszZQE0ebftDXPU6yMbyhswTh1qGfx1UQXA8lldlnhjU8BF9t4LgRObBEJzzK9M1lTkcHMjpJfZf
-        dIKaNVEoFAqFQiF7Wq0HeX5cZs4QLx4AAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAiVJREFUaEPt
+        mEFOWzEQhrMI7BArEFWKYEFPUIF6DlZwhLIG7gLiAgh1RxesOANQqUegm0otatmB+cb+HxiSl+SBkzjC
+        n/Qr9sx4NIPyJua1CoVCoVAovFecc/PoCuXADfqGPqm84eBAG52h3PiNOipzMAQf+GPOXaMVmScGNXTQ
+        qRUExzL3h8C9EO/+o3WZJw61LPuqnPsjUz0EbaI7dI+2ZM4GavJo2xv8n9E/H+ncrsxZodrqG8G3gux5
+        MI5kzg7V17sR7HPowkc4d45m5cqOUGKPRrDFY9Z+M+blagTnvqJFbWuxGIvVtjGc9Wj7BLY3j1nO7fgM
+        4Q9R24z5FGPsyNwInX3eCPv9YHa36IvMjeHsArq0RPATfZDrEWwvY5bkakQ4HjXCOumYJUdtM6yTNGGE
+        FGqEz3jM7nljAsjV1QxK1oQR0tAIisfsgfzJIGf8HNhnvB44DAYRUoVGfoSln1Rt+ZNC3rgZI0kTRkjX
+        3ciM/Ekh71gaib9ah/Ing5zj+WppM66HfQnVTrPXENKoEYP1qMfv43RinayZkCJqxGA/qh/ErhGLLUkz
+        4fiLRgxs1RXlF5rOK4qBLb402kSbzkujgX36r/EV+Kb/H6sK/CMZyylRbf0bMYiJx/K2zNlATR5t+0Nc
+        9TrIxvKGzBOHWoZ/HVRBcDyWV2WeGNTwEX23guBE5sEQnPMr0zWVORwcyOkl9l90gpo1USgUCoVCIXta
+        rQd5flxmzhAvHgAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
